--- a/samples/php_example_only_list/docker-compose.yml
+++ b/samples/php_example_only_list/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '3.8'
 services:
   php-apache-environment:
-    container_name: php_static-apache
-    image: php:8.0-apache
+    container_name: php_example_only_list-apache
+    build: .
     volumes:
       - ./src:/var/www/html/
+    env_file:
+      - .env
     ports:
       - 8000:80
